tests/NormalTests/paczka1/fuzzy1/19266408.err
Error in line 6: A213 A536 75,9
Error in line 18: can76F8 S63 18,0
Error in line 14: DMknPtqcBx A213 83,0
